2004-11-14  David Schleef  <ds@schleef.org>

	* player/swf_play.c: (main): g_file_get_contents() takes gsize,
	  not int.
	* test/dump.c: (main):
	* test/render.c: (main):

2004-11-06  David Schleef  <ds@schleef.org>

	Global reindent.
	* libswfdec/actions.c: (get_actions), (tag_func_do_action),
	(swfdec_action_script_execute):
	* libswfdec/art.c: (art_vpath_reverse), (art_rgb_svp_alpha2),
	(art_rgb565_fillrect), (art_rgb_fillrect),
	(art_rgb565_svp_alpha_callback),
	(art_rgb_svp_alpha_compose_callback), (art_rgb_svp_alpha_callback),
	(art_grey_svp_alpha_callback), (swfdec_art_bpath_from_points),
	(art_bpath_affine_transform_inplace):
	* libswfdec/art.h:
	* libswfdec/color.c: (swfdec_color_apply_transform):
	* libswfdec/color.h:
	* libswfdec/render.c: (tag_place_object_2),
	(swfdec_spriteseg_render), (swfdec_layer_render):
	* libswfdec/swf.c: (swfdec_init), (swfdec_decoder_new),
	(swfdec_decoder_add_data), (swfdec_decoder_add_buffer),
	(swfdec_decoder_eof), (swfdec_decoder_parse),
	(swfdec_decoder_free), (swfdec_decoder_set_image_size),
	(swf_inflate_init), (swf_parse_header2), (tag_func_dumpbits),
	(tag_func_frame_label):
	* libswfdec/swfdec.h:
	* libswfdec/swfdec_actions.h:
	* libswfdec/swfdec_bits.c: (swfdec_bits_get_color_transform),
	(swfdec_bits_get_transform):
	* libswfdec/swfdec_bits.h:
	* libswfdec/swfdec_buffer.c: (swfdec_buffer_new),
	(swfdec_buffer_new_and_alloc), (swfdec_buffer_new_with_data),
	(swfdec_buffer_new_subbuffer), (swfdec_buffer_ref),
	(swfdec_buffer_unref), (swfdec_buffer_free_mem),
	(swfdec_buffer_free_subbuffer), (swfdec_buffer_queue_new),
	(swfdec_buffer_queue_get_depth), (swfdec_buffer_queue_get_offset),
	(swfdec_buffer_queue_free), (swfdec_buffer_queue_push),
	(swfdec_buffer_queue_pull), (swfdec_buffer_queue_peek):
	* libswfdec/swfdec_buffer.h:
	* libswfdec/swfdec_button.c: (swfdec_button_base_init),
	(swfdec_button_class_init), (swfdec_button_init),
	(swfdec_button_dispose), (swfdec_button_render),
	(tag_func_define_button_2):